--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,7 @@
-PORT=4001
-
-APP_URL=http://localhost:3000
-
-CONNECTION_STRING=mongodb://localhost:27017/movieAPI
+PORT = 4001
+APP_URL = "http://localhost:3000"
+CONNECTION_STRING = "mongodb://localhost:27017/movieAPI"
+MY_SECRET_KEY = "very_secret"
+CLIENT_ID = "817290401795-d6ds6ronnut9djcamv7mu1dakheeefr3.apps.googleusercontent.com"
+CLIENT_SECRET = "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"
+REDIRECT_URI = "http://localhost:3000/callback"
