--- a/backend/package.json
+++ b/backend/package.json
@@ -7,5 +7,8 @@
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.4"
+  },
+  "scripts": {
+    "test": "jest"
   }
 }
