--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "https://Glorit74.github.io/movie-reviews/"
+  "homepage": "https://glorit74.github.io/movie-reviews/"
 }
