--- a/frontend/.travis.yml
+++ b/frontend/.travis.yml
@@ -1,24 +1,9 @@
-# language: node_js
-# node_js:
-#   - "stable"
-# cache:
-#   directories:
-#     - node_modules
-# script:
-#   - npm test
-#   - npm run build || true
-# deploy:
-#   provider: pages
-#   skip_cleanup: true
-#   github_token: $GITHUB_TOKEN
-#   local_dir: build
-#   on:
-#     branch: main
-
 language: node_js
-
-node_js:
-  - node
-  - "lts/*"
-
-cache: npm
+ node_js:
+ - "stable"
+ cache:
+ directories:
+   - node_modules
+ script:
+ - npm test
+ - npm run build
